# Acer-Battery-Manager-for-Linux

./: .gitattributes  ApplicationIcon.qrc  BatteryManager.cpp  BatteryManager.h  BatteryManager.ui  CMakeLists.txt  CpuIcon.qrc  LaptopIcon.qrc  README.md  Unoffical_Acer_Care_Center_for_Linux.pro  Unofficial_Acer_Care_Center.pro  application_icon.qrc  backend.cpp  backend.h  bin_icon.qrc  care_center.cpp  care_center.h  care_center.ui  carecenter.cpp  carecenter.h  carecenter.ui  main.cpp
BatteryManager/: Acer_Battery_Manager  install.sh  uninstall.sh
CareCenter/: Unofficial_Acer_Care_Center
images_hiRes/: dependencies.txt
installer/: Unofficial_Acer_Care_Center  install.sh  uninstall.sh
